# powerline_roco

./: README.md  pyproject.toml  settings.toml
src/: configs.py  database.py  distancia_roco.py  log.db  notificator.py  perimetro_roco.py  pipeline.py
src/processors/: proc_abs.py  proc_distance.py  proc_perimeter.py
toolbox/: Ferramentas_Roco.tbx  calc_roco.py  calc_roco2.py  calculadora_comp_entre_vao_e_roco.py
utils/: pytest.py  roco_auto.bat  tests.ipynb  workspace.ipynb
